<resources>
    <string name="app_name">Foodvilla</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_order">My Orders</string>
    <string name="action_wishlist">My Wishlist</string>
    <string name="action_account">My Account</string>
    <string name="action_call">Call</string>
    <string name="action_log_out">Logout</string>
    <string name="action_cart">Cart</string>
    <string name="map">Map</string>
    <string name="menu_call">Call</string>
    <string name="menu_aboutUS">About us</string>
    <string name="rumbles">Rumbles</string>
</resources>
