<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_home" />

       <!-- <item
            android:id="@+id/action_order"
            android:title="@string/action_order"

            />-->
        <item
            android:id="@+id/action_cart"
            android:title="@string/action_order"

            />
        <item
            android:id="@+id/action_wishlist"
            android:title="@string/action_wishlist"

            />
        <item
            android:id="@+id/action_account"
            android:title="@string/action_account"

            />
        <item
            android:id="@+id/action_schedule"
            android:title="Schedule Order"

            />
        <item
            android:id="@+id/nav_call"

            android:title="@string/menu_call" />
        <item
            android:id="@+id/nav_send"

            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_about"

            android:title="@string/menu_aboutUS" />


        <item
            android:id="@+id/nav_map"
            
            android:title="@string/map" />


    </group>





</menu>
